[tool.poetry]
name = "ewgarant sell (1)"
version = "0.1.0"
description = ""
authors = ["Python.Rf <python.rf@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = ">=2.25.1,<2.26.0"
aiosqlite = ">=0.17.0,<0.18.0"
requests = ">=2.31.0,<2.32.0"
loguru = ">=0.7.0,<0.8.0"
beautifulsoup4 = ">=4.12.2,<4.13.0"
aiohttp = ">=3.8.4,<3.9.0"
typing = ">=3.7.4.3,<3.8.0.0"
bs4 = ">=0.0.1,<0.1.0"
aerich = ">=0.7.2,<0.8.0"
click = ">=8.1.7,<8.2.0"
aiocryptopay = "0.2.7"
certifi = "2023.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
